--- a/app/src/main/res/layout/image_viewer.xml
+++ b/app/src/main/res/layout/image_viewer.xml
@@ -10,9 +10,9 @@
         android:id="@+id/image_viewer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-ti    <ImageView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_arrow___left"
+        android:src="@drawable/ic_arrow_left"
         android:id="@+id/back"/>
 </RelativeLayout>
