--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -105,7 +105,8 @@
         android:layout_marginLeft="130dp"
         android:layout_marginTop="580dp"
         android:background="@drawable/rectangle_fill20"
-        android:text="@string/enter" />
+        android:text="@string/enter"
+        android:fontFamily="@font/montserrat_bold"/>
 
     <TextView
         android:id="@+id/registration_text"
