--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -35,15 +35,16 @@
         android:layout_marginTop="75dp"
         android:background="@drawable/rectangle_round" />
 
-    <TextView
-        android:layout_width="145.47dp"
-        android:layout_height="15dp"
+    <EditText
+        android:id="@+id/find_user"
+        android:layout_width="320dp"
+        android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="55dp"
-        android:layout_marginTop="82dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="72dp"
         android:gravity="center_vertical"
-        android:text="@string/find"
+        android:hint="@string/find"
         android:textAppearance="@style/chat_text" />
 
     <TextView
@@ -60,11 +61,11 @@
         android:textAppearance="@style/main_blue" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chat_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_below="@+id/messages"
-        android:id="@+id/chat_list"/>
+        android:layout_marginTop="5dp" />
 
 
 
