--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/chat_"
@@ -107,7 +108,8 @@
         android:layout_marginTop="580dp"
         android:background="@drawable/rectangle_fill20"
         android:text="@string/enter"
-        android:fontFamily="@font/montserrat_bold"/>
+        android:fontFamily="@font/montserrat_bold"
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/registration_text"
