--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,6 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="70dp"
+        android:id="@+id/message_list"/>
+
+    <RelativeLayout
+        android:id="@+id/rectangle_1"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/rectangle">
+
+       <ImageButton
+        android:id="@+id/back"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/ic_arrow_left"
+        android:clipToOutline="true" />
+
+    <TextView
+        android:id="@+id/nickname"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="100dp"
+        android:layout_alignParentTop="true"
+        android:textAppearance="@style/chat"
+        android:gravity="center_vertical"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/montserrat_bold"
+        />
+
+    <TextView
+        android:id="@+id/last_seen"
+        android:layout_width="120dp"
+        android:layout_height="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="40dp"
+        android:textAppearance="@style/chat_text"
+        android:gravity="center_vertical"
+        />
+    </RelativeLayout>
+
+
+
+
+
+    <RelativeLayout
+        android:layout_width="380dp"
+        android:layout_height="50dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="15dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="670dp"
+        android:background="@drawable/rectangle_fill">
+
+        <ImageButton
+            android:id="@+id/send_image"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="270dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="15dp"
+            android:clipToOutline="true"
+            android:background="@drawable/image_send"
+            />
+
+        <ImageButton
+            android:id="@+id/send_message"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="330dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/message_send"
+            android:clipToOutline="true" />
+
+        <ImageButton
+            android:id="@+id/send_voice"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="300dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="15dp"
+            android:clipToOutline="true"
+            android:background="@drawable/microphone"
+            />
+
+        <EditText
+            android:id="@+id/enter_text"
+            android:layout_width="240dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/rectangle"
+            android:textColorHint="@color/white"
+            android:maxLines="5"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="center_vertical"
+            android:hint="@string/enter_text"
+            android:textAppearance="@style/chat"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
