--- a/app/src/main/res/layout/dialog_item.xml
+++ b/app/src/main/res/layout/dialog_item.xml
@@ -9,7 +9,10 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:scaleX="0.2"
+        android:scaleY="0.2"/>
+
     <TextView
         android:id="@+id/user_nick"
         android:layout_width="180dp"
