--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,12 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="70dp"
-        android:id="@+id/message_list"/>
 
     <RelativeLayout
         android:id="@+id/rectangle_1"
@@ -19,16 +13,26 @@
         android:layout_alignParentTop="true"
         android:background="@drawable/rectangle">
 
-       <ImageButton
-        android:id="@+id/back"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/ic_arrow_left"
-        android:clipToOutline="true" />
+        <ImageView
+            android:id="@+id/user_image"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:scaleX="0.2"
+            android:scaleY="0.2"/>
+
+        <ImageButton
+            android:id="@+id/back"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/ic_arrow_left"
+            android:clipToOutline="true" />
 
     <TextView
         android:id="@+id/nickname"
@@ -57,15 +61,12 @@
     </RelativeLayout>
 
 
-
-
-
     <RelativeLayout
         android:layout_width="380dp"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="15dp"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="670dp"
         android:background="@drawable/rectangle_fill">
 
@@ -74,12 +75,11 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="270dp"
             android:layout_alignParentTop="true"
+            android:layout_marginLeft="270dp"
             android:layout_marginTop="15dp"
-            android:clipToOutline="true"
             android:background="@drawable/image_send"
-            />
+            android:clipToOutline="true" />
 
         <ImageButton
             android:id="@+id/send_message"
@@ -97,31 +97,36 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="300dp"
             android:layout_alignParentTop="true"
+            android:layout_marginLeft="300dp"
             android:layout_marginTop="15dp"
-            android:clipToOutline="true"
             android:background="@drawable/microphone"
-            />
+            android:clipToOutline="true" />
 
         <EditText
             android:id="@+id/enter_text"
-            android:layout_width="240dp"
+            android:layout_width="220dp"
             android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/rectangle"
-            android:textColorHint="@color/white"
-            android:maxLines="5"
             android:fontFamily="@font/montserrat_bold"
             android:gravity="center_vertical"
             android:hint="@string/enter_text"
+            android:maxHeight="80dp"
+            android:maxLines="5"
             android:textAppearance="@style/chat"
             android:textColor="@color/white"
+            android:textColorHint="@color/white"
             android:textSize="18sp" />
 
     </RelativeLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/message_list"
+        android:layout_width="match_parent"
+        android:layout_height="580dp"
+        android:layout_marginTop="70dp" />
 </RelativeLayout>
