--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -50,6 +50,17 @@
         android:maxLength="16"
         android:textAppearance="@style/chat_text" />
 
+    <ImageButton
+        android:id="@+id/avatar_open"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="330dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/image_send"
+        android:clipToOutline="true" />
+
     <TextView
         android:id="@+id/messages"
         android:layout_width="138dp"
@@ -66,7 +77,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chat_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/messages"
         android:layout_marginTop="5dp" />
 
