--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -15,13 +15,14 @@
 
         <ImageView
             android:id="@+id/user_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="40dp"
+            android:layout_marginTop="5dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:scaleX="0.2"
-            android:scaleY="0.2"/>
+            android:layout_marginLeft="40dp"
+            android:scaleType="fitCenter"
+            />
 
         <ImageButton
             android:id="@+id/back"
