--- a/app/src/main/res/layout/message_types.xml
+++ b/app/src/main/res/layout/message_types.xml
@@ -12,7 +12,6 @@
         android:layout_marginTop="4dp"
         android:background="@drawable/message_other">
 
-
         <TextView
             android:id="@+id/receiver_message_text"
             android:layout_width="wrap_content"
@@ -170,31 +169,29 @@
             android:layout_marginLeft="0dp" />
     </RelativeLayout>
 
-
-    <ImageView
-        android:id="@+id/message_receiver_image_view"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:background="@drawable/message_other"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="13dp"
-        android:scaleType="centerCrop" />
-
-    <ImageView
-        android:id="@+id/message_sender_image_view"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/message_me"
-        android:scaleType="centerCrop" />
+        <ImageView
+            android:id="@+id/message_receiver_image_view"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentStart="true"
+            android:scaleType="centerCrop" />
 
 
 
+        <ImageView
+            android:background="@drawable/message_me"
+            android:id="@+id/message_sender_image_view"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true" />
 
 
 </RelativeLayout>
