--- a/app/src/main/res/layout/dialog_item.xml
+++ b/app/src/main/res/layout/dialog_item.xml
@@ -4,10 +4,10 @@
     android:layout_height="60dp"
     android:layout_marginLeft="16dp">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/user_image"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true" />
 
@@ -47,6 +47,6 @@
         android:layout_marginTop="40dp"
         android:text="time"
         android:textAppearance="@style/chat_text"
-        android:gravity="center_vertical"
-        />
+        android:gravity="center_vertical"/>
+
 </RelativeLayout>
