--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -46,17 +46,16 @@
         android:fontFamily="@font/montserrat_bold"
         />
 
-    <TextView
-        android:id="@+id/last_seen"
-        android:layout_width="120dp"
-        android:layout_height="10dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="40dp"
-        android:textAppearance="@style/chat_text"
-        android:gravity="center_vertical"
-        />
+        <TextView
+            android:id="@+id/last_seen"
+            android:layout_width="120dp"
+            android:layout_height="15dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="40dp"
+            android:gravity="center_vertical"
+            android:textAppearance="@style/chat_text" />
     </RelativeLayout>
 
 
